# arc-gauge-test

./: .gitignore  ArcGaugeTest.qmlproject  ArcGaugeTest.qrc  CMakeLists.txt  README.md  main.cpp  qtquickcontrols2.conf
ArcGaugeTest/: Constants.qml  qmldir
ArcGaugeTest/designer/: plugin.metainfo
ArcGaugeTestContent/: App.qml  Screen01.ui.qml  Screen02.ui.qml  Screen03.ui.qml
docs/: arc-gauge-calculation.md
